--- a/.github/workflows/helm_charts_scalar.yml
+++ b/.github/workflows/helm_charts_scalar.yml
@@ -48,6 +48,8 @@ jobs:
     needs:
       - lint-chart
       - kubeval-chart
+    env:
+      DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
     strategy:
       matrix:
         k8s:
@@ -68,9 +70,10 @@ jobs:
       - name: Setup kubernetes (Kind) with registry, cassandra and schema
         run: |
           kubectl cluster-info
-          kubectl create secret docker-registry reg-docker-secrets --docker-server=https://index.docker.io/v2/ --docker-username=${{ secrets.DOCKERHUB_USER }} --docker-password=${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+          kubectl create secret docker-registry reg-docker-secrets --docker-server=https://index.docker.io/v2/ --docker-username=scalartest --docker-password=${{ env.DOCKER_PASSWORD }}
           kubectl create -f .github/cassandra.yaml
           echo "Wait until cassandra is running" && sleep 100
+          kubectl get pods,svc,endpoints,nodes -o wide
 
       - name: Run chart-testing (install)
         uses: helm/chart-testing-action@v1.0.0-rc.2
