--- a/operation/roles/scalardl/tasks/copy.yml
+++ b/operation/roles/scalardl/tasks/copy.yml
@@ -1,13 +1,11 @@
 ---
 - name: Create directory on remote server
   file:
-    path: "{{ remote_manifests_directory }}/configuration"
+    path: "{{ remote_directory }}/helm/charts/config"
     state: directory
     mode: '0755'
 
-- name: Copy manifests
+- name: Copy helm charts
   synchronize:
-    src: "{{ local_manifests_directory }}"
-    dest: "{{ remote_manifests_directory }}"
-    rsync_opts:
-      - "--exclude=configuration"
+    src: "{{ local_helm_charts_directory }}"
+    dest: "{{ remote_directory }}/helm/charts"
