--- a/operation/roles/scalardl/tasks/envoy.yml
+++ b/operation/roles/scalardl/tasks/envoy.yml
@@ -1,15 +1,7 @@
 ---
-- name: Get files on remote machine for envoy
-  find:
-    paths: "{{ remote_manifests_directory }}/envoy/"
-    patterns: '*.yaml'
-  register: find_yaml_envoy
-
-- name: Deploy envoy
-  k8s:
-    state: present
-    src: "{{ item.path }}"
-    namespace: "{{ default_kubernetes_namespace }}"
-  with_items: "{{ find_yaml_envoy.files }}"
-  loop_control:
-    label: "{{ item.path }}"
+- name: Deploy Scalar-Envoy
+  command: >-
+    {{ helm_binary_path }} upgrade --install {{ envoy_helm_release_name }} helm/charts/stable/scalar-envoy
+    --namespace {{ kubernetes_namespace }}
+    -f {{ remote_directory }}/helm/charts/config/envoy-custom-values.yaml
+  when: deploy_scalar_envoy
