--- a/operation/roles/scalardl/tasks/ledger.yml
+++ b/operation/roles/scalardl/tasks/ledger.yml
@@ -1,15 +1,7 @@
 ---
-- name: Get files on remote machine for Scalar-ledger
-  find:
-    paths: "{{ remote_manifests_directory }}/ledger/"
-    patterns: '*.yaml'
-  register: find_yaml_ledger
-
-- name: Deploy Scalar-ledger
-  k8s:
-    state: present
-    src: "{{ item.path }}"
-    namespace: "{{ default_kubernetes_namespace }}"
-  with_items: "{{ find_yaml_ledger.files }}"
-  loop_control:
-    label: "{{ item.path }}"
+- name: Deploy Scalar-Ledger
+  command: >-
+    {{ helm_binary_path }} upgrade --install {{ ledger_helm_release_name }} helm/charts/stable/scalar-ledger
+    --namespace {{ kubernetes_namespace }}
+    -f {{ remote_directory }}/helm/charts/config/ledger-custom-values.yaml
+  when: deploy_scalar_ledger
