--- a/operation/roles/scalardl/tasks/copy.yml
+++ b/operation/roles/scalardl/tasks/copy.yml
@@ -9,3 +9,11 @@
   synchronize:
     src: "{{ local_helm_charts_directory }}"
     dest: "{{ remote_directory }}/helm/charts"
+
+- name: Copy helm charts custom values
+  copy:
+    src: "{{ local_helm_charts_values_directory }}/{{ item }}-custom-values.yaml"
+    dest: "{{ remote_directory }}/helm/charts/config/{{ item }}-custom-values.yaml"
+  loop:
+  - envoy
+  - ledger
