--- a/operation/playbook-deploy-scalardl.yml
+++ b/operation/playbook-deploy-scalardl.yml
@@ -3,13 +3,15 @@
   hosts: bastion
   gather_facts: no
   become: no
-  # vars:
-  #   default_kubernetes_namespace: default
-  #   local_manifests_directory: ../../../manifests/
-  #   remote_manifests_directory: "/home/{{ ansible_user }}/manifests"
-  #   docker_registry: "https://index.docker.io/v2/"
-  #   docker_username: "{{ lookup('env','DOCKERHUB_USER') }}"
-  #   docker_password: "{{ lookup('env','DOCKERHUB_ACCESS_TOKEN') }}"
-  #   kubernetes_registry_secret_name: "reg-docker-secrets"
+  vars:
+    # docker_registry: "https://index.docker.io/v2/"
+    # docker_username: "{{ lookup('env','DOCKERHUB_USER') }}"
+    # docker_password: "{{ lookup('env','DOCKERHUB_ACCESS_TOKEN') }}"
+    # kubernetes_registry_secret_name: "reg-docker-secrets"
+    # kubernetes_namespace: default
+    # deploy_scalar_ledger: yes
+    # ledger_helm_release_name: sl
+    # deploy_scalar_envoy: yes
+    # envoy_helm_release_name: se
   roles:
   - "scalardl"
