--- a/charts/stable/scalar-ledger/values.yaml
+++ b/charts/stable/scalar-ledger/values.yaml
@@ -58,6 +58,12 @@ service:
   # service.type -- service types in kubernetes
   type: ClusterIP
 
+prometheusRule:
+  # prometheusRule.enabled -- enable rules for prometheus
+  enabled: true
+  # prometheusRule.namespace -- which namespace prometheus is located. by default monitoring
+  namespace: monitoring
+
 # resources -- resources allowed to the pod
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
