activated prometheusrule and servicemonitor for operation

--- a/operation/config/ledger-custom-values.yaml
+++ b/operation/config/ledger-custom-values.yaml
@@ -3,6 +3,9 @@ replicaCount: 3
 imagePullSecrets:
   - name: reg-docker-secrets
 
+prometheusRule:
+  enabled: true
+
 nodeSelector: {}
 
 tolerations:
