--- a/operation/config/envoy-custom-values.yaml
+++ b/operation/config/envoy-custom-values.yaml
@@ -3,6 +3,12 @@ replicaCount: 3
 envoyConfiguration:
   scalardlAddress: sl-scalar-ledger-headless
 
+serviceMonitor:
+  enabled: true
+
+prometheusRule:
+  enabled: true
+
 tolerations:
 - effect: NoSchedule
   key: kubernetes.io/app
