--- a/charts/stable/scalar-envoy/values.yaml
+++ b/charts/stable/scalar-envoy/values.yaml
@@ -49,7 +49,7 @@ securityContext: {}
   # runAsUser: 1000
 service:
   # service.type -- service types in kubernetes
-  type: LoadBalancer
+  type: ClusterIP
   # service.annotations -- Service annotations, e.g: prometheus, etc.
   annotations: {}
   ports:
