--- a/charts/stable/scalar-envoy/values.yaml
+++ b/charts/stable/scalar-envoy/values.yaml
@@ -49,7 +49,7 @@ securityContext: {}
   # runAsUser: 1000
 service:
   # service.type -- service types in kubernetes
-  type: LoadBalancer
+  type: ClusterIP
   # service.annotations -- Service annotations, e.g: prometheus, etc.
   annotations: {}
   ports:
@@ -70,7 +70,7 @@ service:
 
 serviceMonitor:
   # serviceMonitor.enabled -- enable metrics collect with prometheus
-  enabled: true
+  enabled: false
   # serviceMonitor.interval -- custom interval to retrieve the metrics
   interval: "15s"
   # serviceMonitor.namespace -- which namespace prometheus is located. by default monitoring
