--- a/operation/playbook-install-tools.yml
+++ b/operation/playbook-install-tools.yml
@@ -4,8 +4,8 @@
   gather_facts: no
   become: yes
   # vars:
-    # KUBECTL_CONFIG: tmp/kube_config
-    # KUBECTL_VERSION: v1.15.10
+    # KUBECTL_CONFIG: kube_config
+    # KUBECTL_VERSION: v1.15.11
     # HELM_VERSION: v3.2.1
   pre_tasks:
   # ansible requires python3 as python2 is end of support
