--- a/operation/roles/scalardl/defaults/main.yml
+++ b/operation/roles/scalardl/defaults/main.yml
@@ -1,5 +1,7 @@
+base_local_directory: ../outputs
+env_name: examples
 local_helm_charts_directory: ../../../../charts/stable
-local_helm_charts_values_directory: ../../../config
+local_helm_charts_values_directory: "{{ base_local_directory }}/{{ env_name }}/scalardl"
 remote_directory: "/home/{{ ansible_user }}"
 docker_registry: "https://index.docker.io/v2/"
 docker_username: "{{ lookup('env','DOCKERHUB_USER') }}"
