--- a/operation/roles/kubectl/tasks/install.yml
+++ b/operation/roles/kubectl/tasks/install.yml
@@ -1,11 +1,11 @@
 ---
 - name: Download and install binary on the admin server
   get_url:
-    url: "{{ KUBECTL_URL }}"
-    dest: "{{ KUBECTL_PATH }}"
-    checksum: "sha256:{{ KUBECTL_URL_CHECKSUM_SHA256 }}"
+    url: "{{ kubectl_url }}"
+    dest: "{{ kubectl_path }}"
+    checksum: "sha256:{{ kubectl_url_checksum_sha256 }}"
 
 - name: Set permissions for kubectl
   file:
-    path: "{{ KUBECTL_PATH }}"
+    path: "{{ kubectl_path }}"
     mode: '0755'
