--- a/operation/roles/kubectl/defaults/main.yml
+++ b/operation/roles/kubectl/defaults/main.yml
@@ -1,6 +1,6 @@
 base_local_directory: ../outputs
-env_name: examples
-kubectl_local_config_directory: "{{ base_local_directory }}/{{ env_name }}/kubectl/kube_config"
+env_name: example
+kubectl_local_config_directory: "{{ base_local_directory }}/{{ env_name }}/kube_config"
 kubectl_version: v1.15.11
 kubectl_path: /usr/local/bin/kubectl
 kubectl_url: "https://storage.googleapis.com/kubernetes-release/release/{{ kubectl_version }}/bin/linux/amd64/kubectl"
