--- a/operation/roles/scalardl/defaults/main.yml
+++ b/operation/roles/scalardl/defaults/main.yml
@@ -1,7 +1,7 @@
 base_local_directory: ../outputs
-env_name: examples
+env_name: example
 local_helm_charts_directory: ../../../../charts/stable
-local_helm_charts_values_directory: "{{ base_local_directory }}/{{ env_name }}/scalardl"
+local_helm_charts_values_directory: "{{ base_local_directory }}/{{ env_name }}/"
 remote_directory: "/home/{{ ansible_user }}"
 docker_registry: "https://index.docker.io/v2/"
 docker_username: "{{ lookup('env','DOCKERHUB_USER') }}"
