--- a/.github/workflows/helm_charts_scalar.yml
+++ b/.github/workflows/helm_charts_scalar.yml
@@ -29,10 +29,12 @@ jobs:
   kubeval-chart:
     runs-on: ubuntu-latest
     needs: lint-chart
+    # see https://github.com/instrumenta/kubernetes-json-schema for k8s val
     strategy:
       matrix:
         k8s:
           - v1.15.7
+          - v1.16.4
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -53,10 +55,12 @@ jobs:
       - kubeval-chart
     env:
       DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+    # see https://hub.docker.com/r/kindest/node/tags for k8s val
     strategy:
       matrix:
         k8s:
           - v1.15.11
+          - v1.16.9
     steps:
       - name: Checkout
         uses: actions/checkout@v2
