--- a/.github/workflows/helm_charts_scalar.yml
+++ b/.github/workflows/helm_charts_scalar.yml
@@ -29,7 +29,7 @@ jobs:
   kubeval-chart:
     runs-on: ubuntu-latest
     needs: lint-chart
-    # see https://github.com/instrumenta/kubernetes-json-schema for k8s val
+    # Uses 1.16.4 since it doesn't support 1.16.10 in https://github.com/instrumenta/kubernetes-json-schema.
     strategy:
       matrix:
         k8s:
@@ -55,7 +55,7 @@ jobs:
       - kubeval-chart
     env:
       DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
-    # see https://hub.docker.com/r/kindest/node/tags for k8s val
+    # Uses 1.16.9 since it doesn't support 1.16.10 in https://hub.docker.com/r/kindest/node/tags.
     strategy:
       matrix:
         k8s:
