--- a/operation/playbook-install-tools.yml
+++ b/operation/playbook-install-tools.yml
@@ -3,7 +3,8 @@
   hosts: bastion
   gather_facts: no
   become: yes
-  # vars:
+  vars:
+    base_local_directory: "{{ lookup('env','SCALAR_K8S_OUTPUT_DIRECTORY') }}"
     # kubectl_version: v1.15.10
     # env_name: example
     # HELM_VERSION: v3.2.1
@@ -20,7 +21,7 @@
     set_fact:
       ansible_python_interpreter: "/usr/bin/python3"
   roles:
-    - "kubectl"
-    - "helm"
+    - kubectl
+    - helm
   tags:
   - tools
