--- a/operation/roles/helm/tasks/install.yml
+++ b/operation/roles/helm/tasks/install.yml
@@ -1,9 +1,9 @@
 ---
 - name: Download and install helm binary on admin server
   get_url:
-    url: "{{ HELM_URL }}"
+    url: "{{ helm_url }}"
     dest: /tmp/helm.tar.gz
-    checksum: "sha256:{{ HELM_URL_CHECKSUM_SHA256 }}"
+    checksum: "sha256:{{ helm_url_checksum_sha256 }}"
 
 - name: Unarchive the helm tar
   unarchive:
@@ -14,7 +14,7 @@
 - name: Copy helm binary to $PATH
   copy:
     src: /tmp/linux-amd64/helm
-    dest: "{{ HELM_PATH }}"
+    dest: "{{ helm_path }}"
     mode: "0755"
     remote_src: yes
 
@@ -28,5 +28,5 @@
 
 - name: Set permissions for helm binary
   file:
-    path: "{{ HELM_PATH }}"
+    path: "{{ helm_path }}"
     mode: "0755"
