fix to use SCALAR_K8S_CONFIG_DIR

--- a/operation/playbook-install-tools.yml
+++ b/operation/playbook-install-tools.yml
@@ -4,24 +4,24 @@
   gather_facts: no
   become: yes
   vars:
-    base_local_directory: "{{ lookup('env','SCALAR_K8S_OUTPUT_DIRECTORY') }}"
+    base_local_directory: "{{ lookup('env','SCALAR_K8S_CONFIG_DIR') }}"
     # kubectl_version: v1.16.10
     # env_name: example
     # HELM_VERSION: v3.2.1
   pre_tasks:
-  # ansible requires python3 as python2 is end of support
-  - name: Switch Ansible's Python interpreter to Python 2
-    set_fact:
-      ansible_python_interpreter: "/usr/bin/python"
-  - name: Ensure libselinux-python3 is installed (to use copy in ansible)
-    package:
-      name: libselinux-python3
-      state: present
-  - name: Switch Ansible's Python interpreter to Python 3
-    set_fact:
-      ansible_python_interpreter: "/usr/bin/python3"
+    # ansible requires python3 as python2 is end of support
+    - name: Switch Ansible's Python interpreter to Python 2
+      set_fact:
+        ansible_python_interpreter: "/usr/bin/python"
+    - name: Ensure libselinux-python3 is installed (to use copy in ansible)
+      package:
+        name: libselinux-python3
+        state: present
+    - name: Switch Ansible's Python interpreter to Python 3
+      set_fact:
+        ansible_python_interpreter: "/usr/bin/python3"
   roles:
     - kubectl
     - helm
   tags:
-  - tools
+    - tools
