--- a/operation/playbook-deploy-scalardl.yml
+++ b/operation/playbook-deploy-scalardl.yml
@@ -4,7 +4,7 @@
   gather_facts: no
   become: no
   vars:
-    base_local_directory: "{{ lookup('env','SCALAR_K8S_OUTPUT_DIRECTORY') }}"
+    base_local_directory: "{{ lookup('env','SCALAR_K8S_CONFIG_DIR') }}"
     # docker_registry: "https://index.docker.io/v2/"
     # docker_username: "{{ lookup('env','DOCKERHUB_USER') }}"
     # docker_password: "{{ lookup('env','DOCKERHUB_ACCESS_TOKEN') }}"
@@ -16,4 +16,4 @@
     # envoy_helm_release_name: se
     # env_name: example
   roles:
-  - scalardl
+    - scalardl
