--- a/operation/playbook-install-tools.yml
+++ b/operation/playbook-install-tools.yml
@@ -6,7 +6,7 @@
   # vars:
     # kubectl_version: v1.16.10
     # env_name: example
-    # HELM_VERSION: v3.2.1
+    # helm_version: v3.2.1
   pre_tasks:
   # ansible requires python3 as python2 is end of support
   - name: Switch Ansible's Python interpreter to Python 2
